[tool.poetry]
name = "fastapi-websocket"
version = "0.1.0"
description = "FastAPI implementation of Real Time data streaming using websockets"
authors = ["sanggusti <gustiowinata0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
